--- a/views/partials/legal.handlebars
+++ b/views/partials/legal.handlebars
@@ -1,6 +1,6 @@
 <aside id="legal">
     <p></p>
-    &copy Amine LATTI
+    &copy Balazs Sziveri
     <a href='/images/tandc.pdf' download >
     Download our terms and conditions</a> 
 </aside>
